Support existing configMap.
Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

--- a/charts/grafana-agent/templates/configmap.yaml
+++ b/charts/grafana-agent/templates/configmap.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.config.existingConfigMap -}}
 {{- $prometheusConfigs := tpl .Values.config.prometheus.configs . -}}
 kind: ConfigMap
 apiVersion: v1
@@ -51,3 +52,4 @@ data:
   {{ include "grafana-agent.scrapingConfigFilename" . }}: |
     {{- $prometheusConfigs | nindent 4 }}
   {{- end }}
+{{- end }}
