--- a/charts/redis-ha/templates/redis-ha-servicemonitor.yaml
+++ b/charts/redis-ha/templates/redis-ha-servicemonitor.yaml
@@ -2,18 +2,16 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-{{- if .Values.exporter.serviceMonitor.labels }}
-  labels:
-{{ toYaml .Values.exporter.serviceMonitor.labels | indent 4}}
-{{- end }}
   name: {{ template "redis-ha.fullname" . }}
-  namespace: {{ .Release.Namespace | quote }}
-{{- if .Values.exporter.serviceMonitor.namespace }}
-  namespace: {{ .Values.exporter.serviceMonitor.namespace | quote }}
-{{- end }}
-  {{- range $key, $value := .Values.extraLabels }}
-  {{ $key }}: {{ $value | quote }}
-  {{- end }}
+  namespace: {{ .Values.exporter.serviceMonitor.namespace | default .Release.Namespace | quote }}
+  labels:
+{{ include "labels.standard" . | indent 4 }}
+    {{- range $key, $value := .Values.extraLabels }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
+    {{- range $key, $value := .Values.exporter.serviceMonitor.labels }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
 spec:
   endpoints:
   - targetPort: {{ .Values.exporter.port }}
