--- a/charts/redis-ha/templates/redis-haproxy-servicemonitor.yaml
+++ b/charts/redis-ha/templates/redis-haproxy-servicemonitor.yaml
@@ -2,17 +2,16 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-{{- with .Values.haproxy.metrics.serviceMonitor.labels }}
-  labels: {{ toYaml . | nindent 4}}
-{{- end }}
   name: {{ template "redis-ha.fullname" . }}-haproxy
-  namespace: {{ .Release.Namespace | quote }}
-{{- if .Values.haproxy.metrics.serviceMonitor.namespace }}
-  namespace: {{ .Values.haproxy.metrics.serviceMonitor.namespace | quote }}
-{{- end }}
-  {{- range $key, $value := .Values.extraLabels }}
-  {{ $key }}: {{ $value | quote }}
-  {{- end }}
+  namespace: {{ .Values.haproxy.metrics.serviceMonitor.namespace | default .Release.Namespace | quote }}
+  labels:
+{{ include "labels.standard" . | indent 4 }}
+    {{- range $key, $value := .Values.extraLabels }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
+    {{- range $key, $value := .Values.haproxy.metrics.serviceMonitor.labels }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
 spec:
   endpoints:
   - targetPort: {{ .Values.haproxy.metrics.port }}
