--- a/charts/redis-ha/templates/redis-haproxy-service.yaml
+++ b/charts/redis-ha/templates/redis-haproxy-service.yaml
@@ -27,7 +27,7 @@ spec:
   {{- end }}
   ports:
   - name: tcp-haproxy
-    port: {{ .Values.redis.port }}
+    port: {{ .Values.haproxy.servicePort }}
     protocol: TCP
     targetPort: redis
   {{- if and (eq .Values.haproxy.service.type "NodePort") .Values.haproxy.service.nodePort }}
