- Removed end from if condition added by mistake - Removed serviceAccountName from container - Updated default serviceaccount name for haproxy in values - Updated Readme

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -116,7 +116,7 @@ haproxy:
     # List of CIDR's allowed to connect to LoadBalancer
     # loadBalancerSourceRanges: []
     annotations: {}
-  serviceAccountName: default
+  serviceAccountName: redis-sa
   serviceAccount:
     create: true
   ## Official HAProxy embedded prometheus metrics settings.
