Add a preStop script to trigger a failover before a redis master is terminated
Signed-off-by: Julien Dessaux <julien.dessaux@adyxax.org>

--- a/charts/redis-ha/templates/redis-ha-configmap.yaml
+++ b/charts/redis-ha/templates/redis-ha-configmap.yaml
@@ -33,3 +33,5 @@ data:
 {{- end }}
   haproxy_init.sh: |
 {{- include "config-haproxy_init.sh" . }}
+  trigger-failover-if-master.sh: |
+{{- include "trigger-failover-if-master.sh" . }}
