--- a/charts/redis-ha/templates/redis-ha-psp.yaml
+++ b/charts/redis-ha/templates/redis-ha-psp.yaml
@@ -3,6 +3,7 @@ apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
   name: {{ template "redis-ha.fullname" . }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
 {{ include "labels.standard" . | indent 4 }}
     {{- range $key, $value := .Values.extraLabels }}
