--- a/charts/grafana-agent/values.yaml
+++ b/charts/grafana-agent/values.yaml
@@ -62,6 +62,7 @@ affinity: {}
 # Currently only supports Prometheus 'configs'.
 # Other telemetary options will be added overtime.
 config:
+  logLevel: info
   # Populate this to provide an existing config for Grafana Agent. This disables the charts configMap.
   existingConfigMap: ""
   loki:
