--- a/charts/grafana-agent/templates/deployment.yaml
+++ b/charts/grafana-agent/templates/deployment.yaml
@@ -67,6 +67,9 @@ spec:
               mountPath: /etc/agent
             - name: wal-dir
               mountPath: {{ .Values.config.prometheus.walDir }}
+          {{- with .Values.extraVolumeMounts }}
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -85,4 +88,7 @@ spec:
           name: config
         - name: wal-dir
           emptyDir: {}
+        {{- with .Values.extraVolumes }}
+            {{- toYaml . | nindent 8 }}
+        {{- end }}
 {{- end }}
