--- a/charts/redis-ha/templates/redis-haproxy-service.yaml
+++ b/charts/redis-ha/templates/redis-haproxy-service.yaml
@@ -7,9 +7,12 @@ metadata:
   labels:
 {{ include "labels.standard" . | indent 4 }}
     component: {{ template "redis-ha.fullname" . }}-haproxy
-    {{- range $key, $value := .Values.extraLabels }}
+{{- range $key, $value := .Values.extraLabels }}
     {{ $key }}: {{ $value | quote }}
-    {{- end }}
+{{- end }}
+{{- range $key, $value := .Values.haproxy.service.labels }}
+    {{ $key }}: {{ $value | quote }}
+{{- end }}
   annotations:
   {{- if .Values.haproxy.service.annotations }}
 {{ toYaml .Values.haproxy.service.annotations | indent 4 }}
