--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -33,6 +33,9 @@ ro_replicas: ""
 ## Custom labels for the redis pod
 labels: {}
 
+## Custom labels for redis service
+serviceLabels: {}
+
 configmap:
   ## Custom labels for the redis configmap
   labels: {}
@@ -108,14 +111,17 @@ haproxy:
   stickyBalancing: false
   ## Kubernetes priorityClass name for the haproxy pod
   # priorityClassName: ""
-  ## Service type for HAProxy
-  ##
+
+  ## Service for HAProxy
   service:
     type: ClusterIP
     loadBalancerIP:
+    labels: {}
+    annotations: null
+
     # List of CIDR's allowed to connect to LoadBalancer
     # loadBalancerSourceRanges: []
-    annotations: {}
+
   serviceAccountName: redis-sa
   serviceAccount:
     create: true
