Enable relabeling and metricRelabeling on resources kind: ServiceMonitor.
Signed-off-by: lftgl <v.lftgl@gmail.com>

--- a/charts/redis-ha/templates/redis-ha-servicemonitor.yaml
+++ b/charts/redis-ha/templates/redis-ha-servicemonitor.yaml
@@ -24,6 +24,14 @@ spec:
 {{- if .Values.exporter.serviceMonitor.timeout }}
     scrapeTimeout: {{ .Values.exporter.serviceMonitor.timeout }}
 {{- end }}
+{{- if .Values.exporter.serviceMonitor.metricRelabelings }}
+    metricRelabelings:
+    {{- toYaml .Values.exporter.serviceMonitor.metricRelabelings | nindent 6 }}
+{{- end }}
+{{- if .Values.exporter.serviceMonitor.relabelings }}
+    relabelings:
+    {{- toYaml .Values.exporter.serviceMonitor.relabelings | nindent 6 }}
+{{- end }}
   jobLabel: {{ template "redis-ha.fullname" . }}
   namespaceSelector:
     matchNames:
