[charts/redis-ha]Fix values for podDisruptionBudget for haproxy (#202)
* Fix values for podDisruptionBudget for haproxy

Fix values for podDisruptionBudget for haproxy

* Update Chart.yaml

Co-authored-by: Aaron Layfield <Aaron.Layfield@gmail.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -102,7 +102,7 @@ haproxy:
   ##
   podDisruptionBudget: {}
     # Use only one of the two
-    # maxAvailable: 1
+    # maxUnavailable: 1
     # minAvailable: 1
 
 
