[charts/redis-ha] Add labels to volume claim template
Signed-off-by: Milan Sladky <milan.sladky@sentinelone.com>

--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -567,6 +567,10 @@ spec:
       {{- range $key, $value := .Values.persistentVolume.annotations }}
         {{ $key }}: {{ $value }}
       {{- end }}
+      labels:
+      {{- range $key, $value := .Values.persistentVolume.labels }}
+        {{ $key }}: {{ $value }}
+      {{- end }}
     spec:
       accessModes:
       {{- range .Values.persistentVolume.accessModes }}
