fix(redis-ha): busybox image was migrated from docker hub to public ecr for docker hub rate limit
Signed-off-by: kahirokunn <okinakahiro@gmail.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -205,7 +205,7 @@ rbac:
 sysctlImage:
   enabled: false
   command: []
-  registry: docker.io
+  registry: public.ecr.aws/docker/library
   repository: busybox
   tag: 1.31.1
   pullPolicy: Always
