fix(redis-ha): redis image was migrated from docker hub to public ecr for docker hub rate limit
Signed-off-by: kahirokunn <okinakahiro@gmail.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -2,7 +2,7 @@
 ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
 ##
 image:
-  repository: redis
+  repository: public.ecr.aws/docker/library/redis
   tag: 6.2.5-alpine
   pullPolicy: IfNotPresent
 
