fix(redis-ha): haproxy image was migrated from docker hub to public ecr for docker hub rate limit
Signed-off-by: kahirokunn <okinakahiro@gmail.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -72,7 +72,7 @@ haproxy:
     port: 6380
   replicas: 3
   image:
-    repository: haproxy
+    repository: public.ecr.aws/docker/library/haproxy
     tag: 2.5.7
     pullPolicy: IfNotPresent
 
