Feature/added nodeselector and tolerations to tests (#215)
* Added nodeselector and tolerations

* Upped chart version

Co-authored-by: Aaron Layfield <Aaron.Layfield@gmail.com>

--- a/charts/redis-ha/templates/tests/test-redis-ha-configmap.yaml
+++ b/charts/redis-ha/templates/tests/test-redis-ha-configmap.yaml
@@ -8,6 +8,10 @@ metadata:
   annotations:
     "helm.sh/hook": test-success
 spec:
+  nodeSelector:
+{{ toYaml .Values.nodeSelector | indent 4 }}
+  tolerations:
+{{ toYaml .Values.tolerations | indent 4 }}
   containers:
   - name: check-init
     image: {{ .Values.configmapTest.image.repository }}:{{ .Values.configmapTest.image.tag }}
