--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -567,10 +567,8 @@ spec:
       {{- range $key, $value := .Values.persistentVolume.annotations }}
         {{ $key }}: {{ $value }}
       {{- end }}
-      labels:
-      {{- range $key, $value := .Values.persistentVolume.labels }}
-        {{ $key }}: {{ $value }}
-      {{- end }}
+      labels: {{- toYaml .Values.persistentVolume.labels | nindent 8 }}
+
     spec:
       accessModes:
       {{- range .Values.persistentVolume.accessModes }}
