[charts/redis-ha] Add labels to volume claim template (#211)
* [charts/redis-ha] Add labels to volume claim template

Signed-off-by: Milan Sladky <milan.sladky@sentinelone.com>

* Better implementation

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

Signed-off-by: Milan Sladky <milan.sladky@sentinelone.com>
Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>
Co-authored-by: Aaron Layfield <aaron.layfield@gmail.com>

--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -567,6 +567,8 @@ spec:
       {{- range $key, $value := .Values.persistentVolume.annotations }}
         {{ $key }}: {{ $value }}
       {{- end }}
+      labels: {{- toYaml .Values.persistentVolume.labels | nindent 8 }}
+
     spec:
       accessModes:
       {{- range .Values.persistentVolume.accessModes }}
