--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -44,7 +44,15 @@ configmapTest:
   ## Image for redis-ha-configmap-test hook
   image:
     repository: koalaman/shellcheck
-    tag: v0.5.0
+    tag: v0.8.0
+  ## Resources for the ConfigMap test pod
+  resources:
+    requests:
+      memory: 500Mi
+      cpu: 300m
+    limits:
+      memory: 600Mi
+      cpu: 400m
 
 ## Pods Service Account
 ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/
@@ -71,7 +79,7 @@ haproxy:
     secretName: ""
     keyName:
     certMountPath: /tmp/
-  enabled: false
+  enabled: true
   # Enable if you want a dedicated port in haproxy for redis-slaves
   readOnly:
     enabled: false
@@ -189,6 +197,16 @@ haproxy:
   ## Container lifecycle hooks
   ## Ref: https://kubernetes.io/docs/concepts/containers/container-lifecycle-hooks/
   lifecycle: {}
+
+  ## Properties for the HAProxy tests.
+  tests:
+    resources:
+      requests:
+        memory: 500Mi
+        cpu: 300m
+      limits:
+        memory: 600Mi
+        cpu: 400m
 
 ## PodSecurityPolicy configuration
 ## ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/
