--- a/charts/redis-ha/templates/tests/test-redis-ha-configmap.yaml
+++ b/charts/redis-ha/templates/tests/test-redis-ha-configmap.yaml
@@ -22,6 +22,7 @@ spec:
     - name: config
       mountPath: /readonly-config
       readOnly: true
+    securityContext: {{ toYaml .Values.securityContext | nindent 6 }}
   {{- if .Values.imagePullSecrets }}
   imagePullSecrets: {{ toYaml .Values.imagePullSecrets | nindent 4 }}
   {{- end }}
